--- a/Financial Cal/SiteCore/Css/iCons.css
+++ b/Financial Cal/SiteCore/Css/iCons.css
@@ -3,7 +3,7 @@
     height: 40px;
     position: absolute;
     top: 100px;
-        left: 478px;
+        /*left: 478px;*/
     background-image: url(/PublishingImages/Tax/line.png);
 }
 
