--- a/Financial Cal/SiteCore/Css/bblBase.css
+++ b/Financial Cal/SiteCore/Css/bblBase.css
@@ -1,11 +1,4 @@
-﻿/* fix radius*/
-
-/*button*/
-/*body {
-font-size:16px;*/
-}
-
-.btnbbl {
+﻿.btnbbl {
     background-color: #003399;
     color: #ffffff;
     -webkit-border-radius: 16px;
@@ -46,12 +39,13 @@ font-size:16px;*/
     width: 100%;
 }
 
-   .textHighlight {
-        color: #fff;
-    }
-   .textlight {
-        color:#D3D0C9;
-    }
+.textHighlight {
+    color: #fff !important;
+}
+
+.textlight {
+    color: #D3D0C9 !important;
+}
 
 .lText {
     font-size: 4em;
