--- a/Financial Cal/SiteCore/Css/ProgressIndicator.css
+++ b/Financial Cal/SiteCore/Css/ProgressIndicator.css
@@ -98,7 +98,31 @@ ul.SteppedProgress {
 }
 
     .SteppedProgress li:before {
-        content: counter(step);
+
+       content: counter(step);
+    counter-increment: step;
+    width: 40px;
+    line-height: 40px;
+    display: block;
+    font-size: 16px;
+    color: #FFF;
+    background: gray;
+    border-radius: 25px;
+    margin: 0 auto 10px;
+    position: relative;
+    z-index: 1;
+    color: #333;
+    background-color: #fff;
+    border-color: #ccc;
+    /* cursor: not-allowed; */
+    filter: alpha(opacity=65);
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    opacity: .65;
+    cursor: pointer;
+
+
+        /*content: counter(step);
         counter-increment: step;
         width: 30px;
         line-height: 30px;
@@ -113,23 +137,35 @@ ul.SteppedProgress {
         color: #333;
         background-color: #fff;
         border-color: #ccc;
-        /*cursor: not-allowed;*/
+       
         filter: alpha(opacity=65);
         -webkit-box-shadow: none;
         box-shadow: none;
         opacity: .65;
-        cursor: pointer;
+        cursor: pointer;*/
     }
 
     .SteppedProgress li:after {
-        content: '';
+
+
+            content: '';
+    width: 100%;
+    height: 1px;
+    background: #ccc;
+    position: absolute;
+    left: -50%;
+    top: 19px;
+    z-index: -1;
+
+
+        /*content: '';
         width: 100%;
         height: 2px;
         background: silver;
         position: absolute;
         left: -50%;
         top: 15px;
-        z-index: -1;
+        z-index: -1;*/
     }
 
     .SteppedProgress li:first-child:after {
