--- a/Financial Cal/SiteCore/Css/bblBase.css
+++ b/Financial Cal/SiteCore/Css/bblBase.css
@@ -18,6 +18,12 @@
     -webkit-border-radius: 25px 0px 0px 25px;
 }
 
+.bbl-Middle-Menu a.Active{
+    background-color:#556a87 !important;
+    color:#fff !important;
+
+}
+
  
 
 .bbl-Middle-Menu a:last-child {
